--- a/index.html
+++ b/index.html
@@ -51,25 +51,6 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const backgroundMusic = document.getElementById('backgroundMusic');
-
-            if (backgroundMusic) {
-                const playPromise = backgroundMusic.play();
-
-                if (playPromise !== undefined) {
-                    playPromise.then(_ => {}).catch(error => {
-                        console.error('Autoplay was prevented:', error);
-
-                        // If autoplay is prevented, try playing after a user gesture
-                        document.addEventListener('click', function() {
-                            backgroundMusic.play().catch(error => {
-                                console.error('Autoplay still prevented after user interaction:', error);
-                            });
-                        });
-                    });
-                }
-            }
-
             const textElement = document.getElementById('typedText');
             const phrases = [
                 "netfl8x on top lol",
@@ -115,6 +96,14 @@
                 snowflake.style.animationDuration = `${Math.random() * 2 + 2}s`;
                 document.body.appendChild(snowflake);
             }
+
+            // Ensure the background music plays after a user interaction (e.g., click)
+            document.body.addEventListener('click', function() {
+                const backgroundMusic = document.getElementById('backgroundMusic');
+                backgroundMusic.play().catch(function(error) {
+                    console.error('Autoplay was prevented:', error);
+                });
+            });
         });
     </script>
 </body>
