--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-## THIS SHIT IS OPEN SRC SINCE ITS LITERALLY SKIDDED OF FRAUD.GAY DONT 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +22,7 @@
             font-size: 24px;
             font-family: Tahoma, Verdana, sans-serif;
             position: relative;
-            text-align: center; /* Center the text horizontally */
+            text-align: center; /* Center the text */
         }
 
         .snowflake {
@@ -41,16 +40,15 @@
 
         * {cursor: url(https://cur.cursors-4u.net/others/images3/oth256.png), auto !important;} 
     </style>
+    <script src="snow.js"></script>
 </head>
 <body>
     <a id="typedText" href="https://discord.gg/oslo" target="_blank"></a>
 
-    <audio id="backgroundMusic" loop>
+    <audio id="backgroundMusic" loop autoplay>
         <source src="audio/blade.mp3" type="audio/mp3">
         Your browser does not support the audio tag.
     </audio>
-
-    <button id="startMusicButton">Start Music</button>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -100,11 +98,11 @@
                 document.body.appendChild(snowflake);
             }
 
-            // Event listener to start the background music when the button is clicked
-            document.getElementById('startMusicButton').addEventListener('click', function() {
+            // Ensure the background music plays after a user interaction (e.g., click)
+            document.addEventListener('click', function() {
                 const backgroundMusic = document.getElementById('backgroundMusic');
                 backgroundMusic.play().catch(function(error) {
-                    console.error('Play was prevented:', error);
+                    console.error('Autoplay was prevented:', error);
                 });
             });
         });
