--- a/index.html
+++ b/index.html
@@ -109,3 +109,114 @@
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>O.O</title>
+    <style>
+        body {
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
+            user-select: none; /* Disable text selection for the entire body */
+        }
+
+        a {
+            color: #fff;
+            text-decoration: none; 
+            font-size: 24px;
+            font-family: Tahoma, Verdana, sans-serif;
+            position: relative;
+            text-align: center; /* Center the text */
+        }
+
+        .snowflake {
+            position: absolute;
+            color: #fff;
+            font-size: 20px;
+            animation: snowfall linear infinite;
+        }
+
+        @keyframes snowfall {
+            to {
+                transform: translateY(100vh);
+            }
+        }
+
+        * {cursor: url(https://cur.cursors-4u.net/others/images3/oth256.png), auto !important;} 
+    </style>
+    <script src="snow.js"></script>
+</head>
+<body>
+    <a id="typedText" href="https://discord.gg/oslo" target="_blank"></a>
+
+    <audio id="backgroundMusic" loop>
+        <source src="audio/lucki.mp3" type="audio/mp3">
+        Your browser does not support the audio tag.
+    </audio>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const textElement = document.getElementById('typedText');
+            const phrases = [
+                "netfl8x on top lol",
+                "xeno eldar",
+                ".gg/oslo",
+                "credits to fraud.gay",
+                "(°-°) O.o"
+            ];
+
+            function shuffleArray(array) {
+                for (let i = array.length - 1; i > 0; i--) {
+                    const j = Math.floor(Math.random() * (i + 1));
+                    [array[i], array[j]] = [array[j], array[i]];
+                }
+                return array;
+            }
+
+            // Shuffle the phrases array
+            shuffleArray(phrases);
+
+            let index = 0;
+
+            function cycleText() {
+                textElement.textContent = phrases[index];
+                index = (index + 1) % phrases.length;
+                setTimeout(cycleText, 2000); // Change text every 2 seconds (adjust as needed)
+            }
+
+            // Start the cycling text on page load
+            cycleText();
+
+            const numberOfSnowflakes = 50;
+
+            for (let i = 0; i < numberOfSnowflakes; i++) {
+                createSnowflake();
+            }
+
+            function createSnowflake() {
+                const snowflake = document.createElement('div');
+                snowflake.className = 'snowflake';
+                snowflake.innerHTML = '❄';
+                snowflake.style.left = `${Math.random() * 100}vw`;
+                snowflake.style.animationDuration = `${Math.random() * 2 + 2}s`;
+                document.body.appendChild(snowflake);
+            }
+
+            // Ensure the background music plays after a user interaction (e.g., click)
+            document.addEventListener('click', function() {
+                const backgroundMusic = document.getElementById('backgroundMusic');
+                backgroundMusic.play().catch(function(error) {
+                    console.error('Autoplay was prevented:', error);
+                });
+            });
+        });
+    </script>
+</body>
+</html>
