--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a id="typedText" href="https://discord.gg/oslo" target="_blank"></a>
 
     <audio id="backgroundMusic" loop autoplay>
-        <source src="audio/lucki.mp3" type="audio/mp3">
+        <source src="audio/amg.mp3" type="audio/mp3">
         Your browser does not support the audio tag.
     </audio>
 
