--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="snow.js"></script>
 </head>
 <body>
-    <a id="typedText" href="https://discord.gg/oslo" target="_blank"></a>
+    <a id="typedText" href="https://discord.gg/jak" target="_blank"></a>
 
     <audio id="backgroundMusic" loop autoplay>
         <source src="audio/amg.mp3" type="audio/mp3">
@@ -56,7 +56,7 @@
             const phrases = [
                 "netfl8x on top lol",
                 "xeno eldar",
-                ".gg/oslo",
+                ".gg/jak",
                 "credits to fraud.gay",
                 "(°-°) O.o"
             ];
