--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         a {
             color: #fff;
-            text-decoration: none; 
+            text-decoration: none;
             font-size: 24px;
             font-family: Tahoma, Verdana, sans-serif;
             position: relative;
@@ -38,7 +38,7 @@
             }
         }
 
-        * {cursor: url(https://cur.cursors-4u.net/others/images3/oth256.png), auto !important;} 
+        * {cursor: url(https://cur.cursors-4u.net/others/images3/oth256.png), auto !important;}
     </style>
     <script src="snow.js"></script>
 </head>
@@ -63,49 +63,4 @@
 
             function shuffleArray(array) {
                 for (let i = array.length - 1; i > 0; i--) {
-                    const j = Math.floor(Math.random() * (i + 1));
-                    [array[i], array[j]] = [array[j], array[i]];
-                }
-                return array;
-            }
-
-            // Shuffle the phrases array
-            shuffleArray(phrases);
-
-            let index = 0;
-
-            function cycleText() {
-                textElement.textContent = phrases[index];
-                index = (index + 1) % phrases.length;
-                setTimeout(cycleText, 2000); // Change text every 2 seconds (adjust as needed)
-            }
-
-            // Start the cycling text on page load
-            cycleText();
-
-            const numberOfSnowflakes = 50;
-
-            for (let i = 0; i < numberOfSnowflakes; i++) {
-                createSnowflake();
-            }
-
-            function createSnowflake() {
-                const snowflake = document.createElement('div');
-                snowflake.className = 'snowflake';
-                snowflake.innerHTML = '❄';
-                snowflake.style.left = `${Math.random() * 100}vw`;
-                snowflake.style.animationDuration = `${Math.random() * 2 + 2}s`;
-                document.body.appendChild(snowflake);
-            }
-
-            // Ensure the background music plays after a user interaction (e.g., click)
-            document.addEventListener('click', function() {
-                const backgroundMusic = document.getElementById('backgroundMusic');
-                backgroundMusic.play().catch(function(error) {
-                    console.error('Autoplay was prevented:', error);
-                });
-            });
-        });
-    </script>
-</body>
-</html>
+                    const j
