--- a/index.html
+++ b/index.html
@@ -44,6 +44,52 @@
 </head>
 <body>
     <a id="typedText" href="https://discord.gg/jak" target="_blank"></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>O.O</title>
+    <style>
+        body {
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
+            user-select: none; /* Disable text selection for the entire body */
+        }
+
+        a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 24px;
+            font-family: Tahoma, Verdana, sans-serif;
+            position: relative;
+            text-align: center; /* Center the text */
+        }
+
+        .snowflake {
+            position: absolute;
+            color: #fff;
+            font-size: 20px;
+            animation: snowfall linear infinite;
+        }
+
+        @keyframes snowfall {
+            to {
+                transform: translateY(100vh);
+            }
+        }
+
+        * {cursor: url(https://cur.cursors-4u.net/others/images3/oth256.png), auto !important;}
+    </style>
+    <script src="snow.js"></script>
+</head>
+<body>
+    <a id="typedText" href="https://discord.gg/jak" target="_blank"></a>
 
     <audio id="backgroundMusic" loop autoplay>
         <source src="audio/amg.mp3" type="audio/mp3">
@@ -70,3 +116,22 @@
             }
 
             // Shuffle the phrases
+    <audio id="backgroundMusic" loop autoplay>
+        <source src="audio/amg.mp3" type="audio/mp3">
+        Your browser does not support the audio tag.
+    </audio>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const textElement = document.getElementById('typedText');
+            const phrases = [
+                "netfl8x on top lol",
+                "xeno eldar",
+                ".gg/jak",
+                "credits to fraud.gay",
+                "(°-°) O.o"
+            ];
+
+            function shuffleArray(array) {
+                for (let i = array.length - 1; i > 0; i--) {
+                    const j
