--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <script src="snow.js"></script>
 </head>
 <body>
-    <a id="typedText" href="https://discord.gg/oslo" target="_blank"></a>
+    <a id="typedText" href="https://discord.gg/jak" target="_blank"></a>
 
     <audio id="backgroundMusic" loop>
-        <source src="audio/blade.mp3" type="audio/mp3">
+        <source src="audio/lucki.mp3" type="audio/mp3">
         Your browser does not support the audio tag.
     </audio>
 
@@ -55,7 +55,7 @@
             const phrases = [
                 "netfl8x on top lol",
                 "xeno eldar",
-                ".gg/oslo",
+                ".gg/jak",
                 "credits to fraud.gay",
                 "(°-°) O.o"
             ];
