--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a id="typedText" href="https://discord.gg/jak" target="_blank"></a>
 
     <audio id="backgroundMusic" loop>
-        <source src="audio/amg.mp3" type="audio/mp3">
+        <source src="audio/AMG.mp3" type="audio/mp3">
         Your browser does not support the audio tag.
     </audio>
 
